Bugs, CSS and Reintegrated old file upload method.
Squashed some more bugs.
Reintegrated the old fileUpload option.
Renamed the drag-and-drop options dropUpload.
Cleaned up some CSS.

--- a/assets/css/cj.file_browser.css
+++ b/assets/css/cj.file_browser.css
@@ -520,8 +520,8 @@ a:hover {
 #header button[disabled],
 #header button[disabled="disabled"],
 #header button.disabled {
-	background-position: 0px -64px;
-	cursor: default;
+	background-position: 0px -64px !important;
+	cursor: default !important;
 }
 
 #header button.deactive {
